--- a/runtime/base/index.html
+++ b/runtime/base/index.html
@@ -8,8 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="stylesheet" href="css/main.css">
+        <script src="js/uzume.js"></script>
     </head>
     <body>
-
+      <uzume-world>
+      </uzume-world>
     </body>
 </html>
