--- a/runtime/test/index.html
+++ b/runtime/test/index.html
@@ -12,7 +12,9 @@
         <script src="../base/js/uzume.js"></script>
         <script src="../drivers/krkr/js/krkr.js"></script>
         <script src="../drivers/krkr/js/System.js"></script>
-        <script src="../drivers/krkr/js/Script.js"></script>
+        <script src="../drivers/krkr/js/Scripts.js"></script>
+        <script src="../drivers/krkr/js/Storages.js"></script>
+        <script src="../drivers/krkr/js/Debug.js"></script>
     </head>
     <body>
       <uzume-world>
