--- a/runtime/test/index.html
+++ b/runtime/test/index.html
@@ -9,7 +9,7 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="stylesheet" href="../base/css/main.css">
         <link rel="stylesheet" href="../drivers/krkr/css/krkr.css">
-        <script src="../base/js/uzume.js"></script>
+        <script src="../base/js/jinzamomi.js"></script>
         <script src="../drivers/krkr/js/krkr.js"></script>
         <script src="../drivers/krkr/js/System.js"></script>
         <script src="../drivers/krkr/js/Scripts.js"></script>
@@ -17,10 +17,10 @@
         <script src="../drivers/krkr/js/Debug.js"></script>
     </head>
     <body>
-      <uzume-world>
-      </uzume-world>
+      <jinzamomi-world>
+      </jinzamomi-world>
       <script>
-        uzume.krkr.main("proj/", {});
+        jinzamomi.krkr.main("../../.test-out/kag3/data/", {});
       </script>
     </body>
 </html>
