--- a/runtime/test/index.html
+++ b/runtime/test/index.html
@@ -11,7 +11,13 @@
         <link rel="stylesheet" href="../drivers/krkr/css/krkr.css">
         <script src="../base/js/jinzamomi.js"></script>
         <script src="../drivers/krkr/js/krkr.js"></script>
+        <!-- TJS2 class libs -->
+        <script src="../drivers/krkr/js/Exception.js"></script>
+        <script src="../drivers/krkr/js/Dictionary.js"></script>
+        <script src="../drivers/krkr/js/Array.js"></script>
+        <!-- Krkr2 class libs -->
         <script src="../drivers/krkr/js/System.js"></script>
+        <script src="../drivers/krkr/js/Plugins.js"></script>
         <script src="../drivers/krkr/js/Scripts.js"></script>
         <script src="../drivers/krkr/js/Storages.js"></script>
         <script src="../drivers/krkr/js/Debug.js"></script>
