ファイル管理

--- a/runtime/test/index.html
+++ b/runtime/test/index.html
@@ -26,7 +26,7 @@
       <jinzamomi-world>
       </jinzamomi-world>
       <script>
-        jinzamomi.krkr.main("../../.test-out/kag3/data/", {});
+        jinzamomi.krkr.main("../../.test-out/", {});
       </script>
     </body>
 </html>
