add test environment

--- a/runtime/test/index.html
+++ b/runtime/test/index.html
@@ -9,6 +9,7 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="stylesheet" href="../base/css/main.css">
         <link rel="stylesheet" href="../drivers/krkr/css/krkr.css">
+        <!-- base + krkr driver -->
         <script src="../base/js/jinzamomi.js"></script>
         <script src="../drivers/krkr/js/krkr.js"></script>
         <!-- TJS2 class libs -->
