--- a/runtime/test/mocha.html
+++ b/runtime/test/mocha.html
@@ -17,6 +17,7 @@
   <script src="../drivers/krkr/js/Exception.js"></script>
   <script src="../drivers/krkr/js/Dictionary.js"></script>
   <script src="../drivers/krkr/js/Array.js"></script>
+  <script src="../drivers/krkr/js/String.js"></script>
   <!-- Krkr2 class libs -->
   <script src="../drivers/krkr/js/System.js"></script>
   <script src="../drivers/krkr/js/Plugins.js"></script>
